(menhir
  (modules
    common
    tokens
    file)
  (merge_into parser)
  (infer false)
  (flags
    --strict
    --explain
    --dump
    --dump-resolved
    --no-dollars
    --table
    --inspection))

(library
 (name parse)
 (modes native)
 (instrumentation (backend bisect_ppx))
 (preprocess
   (pps sedlex.ppx))
 (libraries
   sedlex
   menhirLib
   fpath
   post
   syntax))
