(menhir
  (modules tokens)
  (flags
    --strict
    --explain
    --dump
    --dump-resolved
    --no-dollars
    --table
    --inspection
    --only-tokens))

(menhir
  (modules
    common
    tokens
    name
    value
    macro
    incl
    timescale
    pragma
    dir
    seg
    file)
  (merge_into parser)
  ;(infer false)
  (flags
    --strict
    --explain
    --dump
    --dump-resolved
    --no-dollars
    --table
    --inspection
    --external-tokens Tokens))

(library
 (name pre)
 (modes native)
 (instrumentation (backend bisect_ppx))
 (preprocess
   (pps sedlex.ppx))
 (libraries
   sedlex
   menhirLib
   fpath
   common
   post))
